--- a/css/sobre.css
+++ b/css/sobre.css
@@ -24,6 +24,14 @@ figure {
     margin: 30px;
 }
 
+
+#centro-distribuicao {
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
+    /*float: left;*/
+}
+
 figcaption {
     font-style: italic;
     margin-top: 10px;
@@ -32,4 +40,21 @@ figcaption {
 p {
     padding: 0 45px;
     text-indent: 15px;
+}
+
+#familia-pelho {
+    float: right /*left*/;
+    margin: 0 0 10px 10px;
+}
+
+#rodape {
+    color: #777;
+    margin: 30px 0;
+    padding: 30px 0;
+    }
+
+#rodape img {
+    margin-right: 30px;
+    vertical-align: middle;
+    width: 94px;
 }
