--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,3 +41,123 @@ header {
     bottom: 0;
     right: 0;
 }
+
+.busca,
+.menu-departamentos {
+    background-color: #DCDCDC;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 10px;
+    width: 230px;
+    float: left;
+}
+.busca h2,
+.busca form,
+.menu-departamentos h2 {
+    margin: 10px;
+}
+.menu-departamentos li {
+    background-color: white;
+    margin-bottom: 1px;
+    padding: 5px 10px;
+}
+.menu-departamentos a {
+    color: #333333;
+    text-decoration: none;
+}
+
+.menu-departamentos {
+    clear: left;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+.busca input[type=search] {
+    width: 170px;
+}
+.destaque {
+    margin-top: 10px;
+}
+.painel {
+    margin: 10px 0;
+    padding: 10px;
+    width: 445px;
+}
+.novidades {
+    float: left;
+}
+.mais-vendidos {
+    float: right;
+}
+.painel li {
+    display: inline-block;
+    vertical-align: top;
+    width: 140px;
+    margin: 2px;
+    padding-bottom: 10px;
+}
+
+.painel h2 {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.painel a {
+    color: #333;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+}
+.novidades {
+    background-color: #F5DCDC;
+}
+.mais-vendidos {
+    background-color: #DCDCF5;
+}
+footer {
+    background-image: url(../img/fundo-rodape.png);
+    clear: both;
+}
+.social a {
+    /* tamanho da imagem */
+    height: 32px;
+    width: 32px;
+    /* image replacement */
+    display: block;
+    text-indent: -9999px;
+}
+.social a[href*="facebook.com"] {
+    background-image: url(../img/facebook.png);
+}
+.social a[href*="twitter.com"] {
+    background-image: url(../img/twitter.png);
+}
+.social a[href*="plus.google.com"] {
+    background-image: url(../img/googleplus.png);
+}
+footer {
+    padding: 20px 0;
+}
+footer .container {
+    position: relative;
+}
+.social {
+    position: absolute;
+    top: 12px;
+    right: 0;
+}
+.social li {
+    float: left;
+    margin-left: 25px;
+}
+.busca button {
+    /* adicionando imagem */
+    background-image: url(../img/busca.png);
+    background-repeat: no-repeat;
+    border: none;
+    /* tamanho da imagem */
+    width: 20px;
+    height: 20px;
+    /* imagem replacement */
+    text-indent: -9999px;
+}
